# task_manager

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/: __main__.py
src/task_manager/: create_app.py  handler.py  utils.py  views.py
test/: change_row.json  change_task_status.json  check_history_change.json  check_tasks.json  create_task.json  create_user.json  test_query.py
