[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "test project for anna company"
authors = ["smapl <a.mustafin00@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
psycopg2-binary = "^2.8.4"
loguru = "^0.5.3"
requests = "^2.24.0"


[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.6.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


